Updates to css and templates for dynamic fields

--- a/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
+++ b/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
@@ -57,7 +57,7 @@ $count = 1;
         $q('#features_container').sortable({
             handle: '.draggable-handle',
             revert: 300,
-            placeholder: "ui-state-highlight myHover",
+            placeholder: "jqplaceholder",
             tolerance: "intersect",
             update: function( event, ui ) {
                 $q('.features_drag').each(function(i, obj) {
