--- a/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
@@ -54,7 +54,7 @@ $count = 1;
         $q('#in_the_box_container').sortable({
             handle: '.draggable-handle',
             revert: 300,
-            placeholder: "ui-state-highlight myHover",
+            placeholder: "jqplaceholder",
             tolerance: "intersect",
             update: function( event, ui ) {
                 $q('.inthebox_drag').each(function(i, obj) {
