--- a/app/code/Gradus/Highlights/view/adminhtml/templates/product/edit/highlights.phtml
+++ b/app/code/Gradus/Highlights/view/adminhtml/templates/product/edit/highlights.phtml
@@ -51,7 +51,7 @@ $count = 1;
         $q('#highlight_container').sortable({
             handle: '.draggable-handle',
             revert: 300,
-            placeholder: "ui-state-highlight myHover",
+            placeholder: "jqplaceholder",
             tolerance: "intersect",
             update: function( event, ui ) {
                 $q('.highlight_drag').each(function(i, obj) {
