--- a/app/code/Gradus/TechSpecs/view/adminhtml/templates/product/edit/techspecs.phtml
+++ b/app/code/Gradus/TechSpecs/view/adminhtml/templates/product/edit/techspecs.phtml
@@ -9,12 +9,11 @@ $count = 1;
 <div id="headers_container" style="min-width:775px;">
     <?php if (!is_null($info)) : ?>
     <?php foreach ($info as $header) : ?>
-        <?php $speccount = 1 ?>
     <div class="header_div" id="header_div_<?= $count ?>">
         <h3 id="header_title_<?= $count ?>">
-            <div class="draggable-handle"><b></b><?= $count ?></b></div>
+            <div class="draggable-handle header_drag"><b></b><?= $count ?></b></div>
             <div style="display:inline-block" id="h_text_<?= $count ?>" class="header_txt"><?= $header['header']['header_name'] ?></div>
-            <a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader('header_div_<?= $count ?>')">
+            <a class="delete_icon" style="float:right" src="javascript:void(0)" onclick="deleteHeader('header_div_<?= $count ?>')">
                 <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>">
             </a>
         </h3>
@@ -30,27 +29,28 @@ $count = 1;
             </tr>
             <tr style="height:10px;"></tr>
             <tr>
+                <?php $speccount = 1 ?>
                 <td class="spec_td">
                     <?php foreach ($header as $specs) : ?>
                         <?php foreach ($specs as $spec) : ?>
-                        <?php if (isset($spec['name'])) : ?>
-                    <div class="specs_row" id ="spec_row_<?= $count ?>_<?= $speccount ?>">
-                        <div style="display:inline-block; margin-left:-30px; cursor:move" class="draggable-handle2"><b><?= $speccount ?></b></div>
-                            <label class="gradus_label" for="spec_name_.<?= $speccount ?>">Spec Name</label>
-                        <a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader('spec_row_<?= $count ?>_<?= $speccount ?>')">
-                            <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>">
-                        </a>
-                            <input style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec[<?= $count?>][header][<?= $speccount ?>][name]"
-                                   id="spec_name_".<?= $speccount ?> value="<?= $spec['name'] ?>"/>
-                            <label class="gradus_label" for="spec_desc_".<?= $speccount ?>>Spec Description</label>
-                            <textarea style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec[<?= $count?>][header][<?= $speccount ?>][desc] id="spec_desc_<?= $speccount ?>"
-                        value="<?= $spec['desc'] ?>"><?= $spec{'desc'} ?></textarea>
-                        <a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader('spec_row_<?= $count ?>_<?= $speccount ?>')">
-                           </a>
-                        </div>
+                            <?php if (isset($spec['name'])) : ?>
+                                <div class="specs_row" id ="spec_row_<?= $count ?>_<?= $speccount ?>">
+                                    <div style="display:inline-block; margin-left:-30px; cursor:move" class="draggable-handle2 specs_drag"><b><?= $speccount ?></b></div>
+                                    <label class="gradus_label" for="spec_name_.<?= $speccount ?>">Spec Name</label>
+                                    <a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader('spec_row_<?= $count ?>_<?= $speccount ?>')">
+                                        <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>">
+                                    </a>
+                                    <input style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec[<?= $count?>][header][<?= $speccount ?>][name]"
+                                           id="spec_name_".<?= $speccount ?> value="<?= $spec['name'] ?>"/>
+                                    <label class="gradus_label" for="spec_desc_".<?= $speccount ?>>Spec Description</label>
+                            <textarea style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec[<?= $count?>][header][<?= $speccount ?>][desc]
+                                                        id="spec_desc_<?= $speccount ?>" value="<?= $spec['desc'] ?>"><?= $spec{'desc'} ?></textarea>
+                                    <a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader('spec_row_<?= $count ?>_<?= $speccount ?>')">
+                                    </a>
+                                </div>
+                                <?php $speccount++ ?>
                             <?php endif ?>
-                        <?php $speccount++ ?>
-                    <?php endforeach ?>
+                        <?php endforeach ?>
                     <?php endforeach ?>
                 </td>
             </tr>
@@ -76,6 +76,45 @@ $count = 1;
 <script>
     var $q = jQuery.noConflict();
 
+    function updateaccord()
+    {
+        $q('#headers_container').append('').accordion("destroy").accordion({
+            header: "> div > h3",
+            autoHeight: false,
+            collapsible: true,
+        }).disableSelection();;
+
+        $q('.spec_td').sortable({
+            connectWith: "div.specs_row",
+            revert: 300,
+            handle: '.draggable-handle2',
+            tolerance: "intersect",
+            placeholder: "jqplaceholder",
+            update: function( event, ui ) {
+                $q('.specs_drag').each(function(i, obj) {
+                    var ii = i+1;
+                    $q(this).html(ii);
+                })
+            }
+        }).disableSelection();
+        $q('.spec_td').sortable('refresh');
+    }
+
+    function copytechspecs()
+    {
+        var theid = $q('#copy_from_techspecs').val();
+        $q.ajax({
+            url: 'http://'+window.location.hostname+"/admin/catalog/product/copy/id/"+theid+"/field/techspecs/",
+            data: {form_key: window.FORM_KEY},
+            context: document.body
+        }).done(function(res) {
+            var q = res.res;
+            $q('#headers_container').html(q);
+            updateaccord();
+            updateaccord();
+        });
+    }
+
     $q( document ).ready(function() {
         console.log( $q("input[name*='product[tech_specs']").val() );
         $q('[name="product[tech_specs]"]').prev().prev().hide();
@@ -88,13 +127,26 @@ $count = 1;
             '.draggable-handle',
             revert: 300,
             tolerance: "intersect",
+            update: function( event, ui ) {
+                console.log("BIG CHANGED HERE")
+                $q('.header_drag').each(function(i, obj) {
+                    var ii = i+1;
+                    $q(this).html(ii);
+                })
+            }
         }).disableSelection();
         $q('.spec_td').sortable({
             connectWith: "div.specs_row",
             revert: 300,
             handle: '.draggable-handle2',
             tolerance: "intersect",
-            placeholder: "jqplaceholder"
+            placeholder: "jqplaceholder",
+            update: function( event, ui ) {
+                $q('.specs_drag').each(function(i, obj) {
+                    var ii = i+1;
+                    $q(this).html(ii);
+                })
+            }
         }).disableSelection();
     });
 
@@ -109,33 +161,34 @@ $count = 1;
 
     function addHeader()
     {
-        var count = $q('div.header_div').length+1;
+        var count = $q('div.header_div').length;
         var lbc = count++;
-        count = lbc;
+        lbc++;
 
-        var template = '<div class="header_div" id="header_div_'+count+'">'+
-            '<h3 id="header_title_'+count+'">'+
-            '<div class="draggable-handle"></div>'+
-            '<div class="draggable-handle"><b></b>'+count+'</b></div>'+
-             '<a src="javascript:void(0)" onclick="deleteHeader(\'header_div_'+count+'\')">'+
+        var template = '<div class="header_div" id="header_div_'+lbc+'">'+
+            '<h3 id="header_title_'+lbc+'">'+
+            '<div class="draggable-handle header_drag"><b>'+lbc+'</b></div>'+
+            '<div style="display:inline-block" id="h_text_'+lbc+'" class="header_txt">N/A</div>' +
+            '<a style="margin-left:8px;" src="javascript:void(0)" onclick="deleteHeader(\'header_div_'+lbc+'\')">'+
             '<img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a>'+
-            '</h3><div><table class="tech_spec_table" id="header_table_'+count+'">'+
-            '<tr class="header_row"><td><label class="gradus_label" for="header_text_'+count+'">Header Text</label>'+
-            '<input style="width:85%" class="gradus_text_large" onkeyup="updateHeader(this.value, \'h_text_'+count+'\')" id="header_title_'+count+'"' +
-            'data-form-part="product_form" name="techspec['+count+'][header][header_name]"'+
-            'id="header_text_'+count+'" value=""/>'+
+            '</h3><div><table class="tech_spec_table" id="header_table_'+lbc+'">'+
+            '<tr class="header_row">'+
+            '<td><label class="gradus_label" for="header_text_'+lbc+'">Header Text</label>'+
+            '<input style="width:85%" class="gradus_text_large" onkeyup="updateHeader(this.value, \'h_text_'+lbc+'\')" id="header_title_'+lbc+'"' +
+            'data-form-part="product_form" name="techspec['+lbc+'][header][header_name]"'+
+            'id="header_text_'+lbc+'" value=""/>'+
             '</td></tr><tr><td class="spec_td">'+
-            '<div class="specs_row" id ="spec_row_'+count+'_0">'+
-            '<div style="display:inline-block; cursor:move" class="draggable-handle2"></div>'+
+            '<div class="specs_row" id ="spec_row_'+lbc+'_0">'+
+            '<div style="display:inline-block; margin-left:-30px;" class="draggable-handle2 specs_drag"><b>1</b></div>'+
             '<label class="gradus_label" for="spec_name_0">Spec Name</label>'+
-            '<a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader(\'spec_row_<?= $count ?>_<?= $speccount ?>\')">'+
+            '<a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader(\'spec_row'+lbc+'\')">'+
             '<img style="width:20px;" src="<?= $this->getViewFileUrl("Gradus_Catalog::images/trash.png") ?>"></a>'+
-            '<input style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec['+count+'][header][0][name]"'+
+            '<input style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec['+lbc+'][header][0][name]"'+
             '<label class="gradus_label" for="spec_desc_0">Spec Description</label>'+
-            '<textarea style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec[0][header][0][desc] id="spec_desc_0"'+
+            '<textarea style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec['+lbc+'][header][0][desc] id="spec_desc_0"'+
             'value=""></textarea>'+
-            '<a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader(\'spec_row_'+count+'_0\')">'+
-            '</a></div></td> </tr> </table><button onclick="addSpec(\'header_table_'+count+'\')">Add Spec</button>'+
+            '<a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader(\'spec_row_'+lbc+'_0\')">'+
+            '</a></div></td> </tr> </table><button class="action-secondary" onclick="addSpec(\'header_table_'+lbc+'\')">Add Spec</button>'+
             '</div>';
 
         $q('#headers_container').append(template).accordion("destroy").accordion({
@@ -149,7 +202,13 @@ $count = 1;
             revert: 300,
             handle: '.draggable-handle2',
             tolerance: "intersect",
-            placeholder: "ui-state-highlight myHover"
+            placeholder: "jqplaceholder",
+            update: function( event, ui ) {
+                $q('.specs_drag').each(function(i, obj) {
+                    var ii = i+1;
+                    $q(this).html(ii);
+                })
+            }
         }).disableSelection();
         $q('.spec_td').sortable('refresh');
     }
@@ -160,13 +219,13 @@ $count = 1;
         var counts = $q('div.header_div table tr td div.specs_row').length+1;
         var template =
             '<div class="specs_row" id ="spec_row_'+count+'_'+counts+'">'+
-            '<div style="display:inline-block; margin-left:-30px;" class="draggable-handle2"><b>'+counts+'</div>'+
+            '<div style="display:inline-block; margin-left:-30px;" class="draggable-handle2 specs_drag"><b>'+counts+'</div>'+
             '<label class="gradus_label" for="spec_name_"'+counts+'>Spec Name</label>'+
+            '<a style="margin-right: src="javascript:void(0)" onclick="deleteHeader(\'spec_row_'+count+'_'+counts+'\')">'+
+            '<img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a>'+
             '<input style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec['+count+'][header]['+counts+'][name]" id="spec_name_'+counts+'" value="">'+
             '<label class="gradus_label" for="spec_desc_"+count>Spec Description</label>'+
             '<textarea style="width:99%" class="gradus_text_large" data-form-part="product_form" name="techspec['+count+'][header]['+counts+'][desc]" id="spec_desc_0" value=""/>'+
-            '<a class="delete_icon" src="javascript:void(0)" onclick="deleteHeader(\'spec_row_'+count+'_'+counts+'\')">' +
-            '</a>'+
             '</div>';
         console.log(appendTo);
         $q('#'+appendTo+' tbody tr td.spec_td').append(template);
