put call in phtml files instead

--- a/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
@@ -51,6 +51,7 @@ $count = 1;
     }
 
     $q( document ).ready(function() {
+        $q('#copy_from_inthebox').chosen();
         $q('#in_the_box_container').sortable({
             handle: '.draggable-handle',
             revert: 300,
