--- a/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
+++ b/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
@@ -53,7 +53,7 @@ $count = 1;
     }
 
     $q( document ).ready(function() {
-
+        $q('#copy_from_feature').chosen();
         $q('#features_container').sortable({
             handle: '.draggable-handle',
             revert: 300,
