--- a/app/code/Gradus/Highlights/view/adminhtml/templates/product/edit/highlights.phtml
+++ b/app/code/Gradus/Highlights/view/adminhtml/templates/product/edit/highlights.phtml
@@ -48,6 +48,7 @@ $count = 1;
     }
 
     $q( document ).ready(function() {
+        $q('#copy_from_highlights').chosen();
         $q('#highlight_container').sortable({
             handle: '.draggable-handle',
             revert: 300,
