--- a/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_mainproducts.xml
+++ b/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_mainproducts.xml
@@ -21,6 +21,7 @@
         <referenceContainer name="content">
             <uiComponent name="product_listing_mainproducts"/>
             <block class="Magento\Catalog\Block\Adminhtml\Product" name="products_list"/>
+            <block class="Gradus\Catalog\Block\Adminhtml\ProductModal" name="products_list"/>
         </referenceContainer>
     </body>
 </page>
