Spacing issues resolved.

--- a/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
+++ b/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
@@ -40,7 +40,7 @@ $clb = 1;
         $q('#features_container').append
         ('<div class="specs_row" id="features_'+counts+'"><div class="draggable-handle"></div>' +
             '<label for="feat_n_'+counts+'">Label '+clb+'</label>'+
-            '<input id="feat_n_'+counts+'" style="width:15%; margin-right:5px;" data-form-part="product_form" value="" name="features['+counts+'][name]" />'+
+            '<input id="feat_n_'+counts+'" style="width:15%; margin-right:5px; margin-left:10px;" data-form-part="product_form" value="" name="features['+counts+'][name]" />'+
             '<label for="feat_d_'+counts+'">Feature '+clb+'</label>'+
             '<textarea id="feat_d_'+counts+'" style="width:50%; vertical-align: top;" data-form-part="product_form" name="features['+counts+'][desc]"></textarea>'+
             "<a class=\"delete_icon\" src=\"javascript:void(0)\" onclick=\"deleteFeature(\'features_"+counts+"\')\"></a>" +
