in the b ox coutner fixed

--- a/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
+++ b/app/code/Gradus/InTheBox/view/adminhtml/templates/product/edit/inthebox.phtml
@@ -43,7 +43,7 @@ $count = 1;
     });
     function addinthebox()
     {
-        var counts = $q('#in_the_box_container input').length;
+        var counts = $q('#in_the_box_container .gradus_fields').length;
         var clb = counts+1;
         var vals = '';
 
