--- a/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
+++ b/app/code/Gradus/Features/view/adminhtml/templates/product/edit/features.phtml
@@ -14,7 +14,7 @@ $count = 1;
                     <input name="features[<?= $count ?>][name]" data-form-part="product_form" class="gradus_text_large" id="feat_n_<?= $count ?>" value="<?= $i['name'] ?>" />
                     <div style="line-break:auto" />
                     <label style="margin-left:18px" class="gradus_label" for="feat_d_<?= $count ?>">Feature</label>
-                    <textarea data-form-part="product_form" name="features[<?= $count?>][desc]" style="margin-top:5px;" class="gradus_text_large" id="feat_d_<?= $count ?>">
+                    <textarea data-form-part="product_form" name="features[<?= $count?>][desc]" style="margin-top:5px; width:79.5%;" class="gradus_text_large" id="feat_d_<?= $count ?>">
                         <?= $i['desc'] ?></textarea>
                     <a src="javascript:void(0)" onclick="deleteFeature('features_<?= $count ?>')">
                         <img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>">
@@ -78,7 +78,7 @@ $count = 1;
         q += '<input name="features['+clb+'][name]" data-form-part="product_form" class="gradus_text_large" id="feat_n_'+clb+'" value="" />';
         q += '<div style="line-break:auto" />';
         q += '<label style="margin-left:18px" class="gradus_label" for="feat_d_'+clb+'">Feature</label>';
-        q += '<textarea data-form-part="product_form" name="features['+clb+'][desc]" data-form-part="product_form" class="gradus_text_large" id="feat_d_'+clb+'>" value=""></textarea>';
+        q += '<textarea data-form-part="product_form" name="features['+clb+'][desc]" style="width:79.5%; top-margin:5px;" data-form-part="product_form" class="gradus_text_large" id="feat_d_'+clb+'>" value=""></textarea>';
         q += '<a src="javascript:void(0)" style="margin-left:6px;" onclick="deleteFeature(\'features_'+clb+'\')">';
         q += '<img style="width:20px;" src="<?= $this->getViewFileUrl('Gradus_Catalog::images/trash.png') ?>"></a></div>';
 
