--- a/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_edit.xml
+++ b/app/code/Gradus/Catalog/view/adminhtml/layout/catalog_product_edit.xml
@@ -1,4 +1,4 @@
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-2columns-left" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-1column" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
     <head>
         <link src="Gradus_Catalog::js/copy.js"/>
         <link src="Gradus_Catalog::css/chosen.min.css"/>
